feat: Auto start servers
